# semantic-appdiff

./: .coverage  .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  cov_output.txt  pyproject.toml  requirements.txt  test-diff.bat  test_output.txt
.github/workflows/: apidiff.yml
apidiff-demo/: findings.json  fp_v1.json  fp_v2.json  report.html
apidiff-demo-clean/: findings.json  fp_v1.json  fp_v2.json  report.html
apidiff-demo-error/: findings.json  fp_v1.json  fp_v2.json
apidiff-report/: fp_v1.json  fp_v2.json  report.html
apidiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
capture/: __init__.py  proxy.py  replay.py  validator.py
cli/: __init__.py  main.py
engine/: __init__.py  detectors.py  diff.py  models.py
extractor/: __init__.py  extractor.py  models.py  normalizer.py
fingerprint/: __init__.py  builder.py  models.py
fixtures/: sample.har
reporter/: __init__.py  cli_reporter.py  html_reporter.py  json_reporter.py
tests/: __init__.py  test_capture.py  test_cli_reporter.py  test_engine.py  test_extractor.py  test_fingerprint.py  test_reporter.py
tests/fixtures/co_occurrence/: v1.har  v2.har
tests/fixtures/enum_rename/: v1.har  v2.har
tests/fixtures/error_rate/: v1.har  v2.har
tests/fixtures/idempotency/: v1.har  v2.har
tests/fixtures/latency/: v1.har  v2.har
